# TLE

./: .gitignore  environment.template  pyproject.toml  run.sh  uvicorn.json
tle/: __main__.py  api.py  constants.py
tle/cogs/: ai.py  codeforces.py  duel.py  emoji.py  fun.py  gym.py  handles.py  lockout.py  priy.py  roles.py  spoi.py  verify.py
tle/util/: codeforces_api.py
tle/util/db/: user_db_conn.py
